--- a/ProjetRoxane/ProjetRoxane.csproj
+++ b/ProjetRoxane/ProjetRoxane.csproj
@@ -12,4 +12,9 @@
     <PackageReference Include="Unity" Version="5.11.9" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PR_DTO_JSON\PR_DTO_JSON.csproj" />
+    <ProjectReference Include="..\PR_Entites\PR_Entites.csproj" />
+  </ItemGroup>
+
 </Project>
